--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "next": "15.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
