--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.7.9",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
-    "mongodb": "^6.12.0",
     "mongoose": "^8.9.3",
     "next": "15.1.1",
     "react": "^19.0.0",
