--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.9.3",
     "next": "15.1.1",
     "react": "^19.0.0",
